# turbine-mesher

./: .env  .gitignore  Dockerfile  Makefile  README.md  Untitled.ipynb  pyproject.toml  requirements.txt  surface_nodes
.devcontainer/: devcontainer.json
.trunk/: trunk.yaml
examples/: blade_,mesh.py  cubadebate.ipynb  deformation.xdmf  deformation000000.pvtu  deformation000001.pvtu  iea15mwBlade.ipynb  iea15mwBladeShell.ipynb  linearelasticity.ipynb  mesher.py  news_data.csv  news_data_2024-12-09.csv  news_data_2024-12-10.csv  test_linear_solvers.py  test_modal.py  test_modal_solver.py  test_shell.py  test_shell_abaqus.py  torque_rotor  w.h5  w.pbd  w.xdmf  w000000.pvtu
examples/.ipynb_checkpoints/: linearelasticity-checkpoint.ipynb
examples/data/: blade.yaml
examples/results/: local_frame.pvd  local_frame000000.pvtu  local_frame000001.pvtu  local_frame000002.pvtu
output/: shell.vtk
src/: pyproject.toml
src/turbine_mesher/: abaqus.py  blade.py  enums.py  fem.py  helpers.py  mesh.py  models.py  rotor.py  types.py  viewer.py
src/turbine_mesher/elements/: __init__.py  abc.py  quad.py  shell.py  tri.py
src/turbine_mesher/io/: mesh.py  yaml.py
